testdata/valid/interleave_04.lisp
(defcolumns (X :i16) (Y :i16) (Z :i16))
(definterleaved A (X Y))
(deflookup l1 (A) (Z))
